# hand_eye_calibration

./: README.md  all_dependencies.rosinstall  config.info  hand_eye_calibration.rosinstall
datasets/: tango_caligula_sos_to_device.csv  tango_mars_sos_to_device.csv  tango_nero_sos_to_device.csv  unzip_all.sh
datasets/TANGO_exCALIBur_easy/: CALIGULA_2017-04-06-18-21-33.csv  MARS_2017-04-06-18-23-37.csv  NERO_2017-04-06-18-25-25.csv
datasets/TANGO_exCALIBur_hard/: CALIGULA_2017-04-07-11-26-27.csv  MARS_2017-04-07-11-28-33.csv  NERO_2017-04-07-12-42-54.csv
hand_eye_calibration/: CMakeLists.txt  README.md  package.xml  setup.py
hand_eye_calibration/calib/: falcon_color.yaml  falcon_fisheye.yaml  falcon_infrared.yaml  primesense_ir.yaml  primesense_rgb.yaml  primesense_rgb_depth_gun.yaml  sr300_color.yaml  sr300_ir.yaml  sr300_sim_color.yaml  target_30_090.yaml  target_55_165.yaml  target_large.yaml
hand_eye_calibration/configs/: depth_gun_vicon.yaml  falcon.yaml  primesense.yaml  yumi_demo.yaml
hand_eye_calibration/python/hand_eye_calibration/: algorithm_config.py  bash_utils.py  calibration_verification.py  csv_io.py  dual_quaternion.py  dual_quaternion_hand_eye_calibration.py  extrinsic_calibration.py  hand_eye_calibration_plotting_tools.py  hand_eye_test_helpers.py  quaternion.py  test_tools.py  time_alignment.py  time_alignment_plotting_tools.py  utils.py
hand_eye_calibration/scripts/: box_plot.py  close_the_circle_test.py  compute_complete_handeye_calibration.sh  depth_gun.sh  generate_plots.py
hand_eye_calibration/test/: test_dual_quaternion.py  test_hand_eye_calibration.py  test_quaternion.py  test_time_alignment.py
hand_eye_calibration_batch_estimation/: CMakeLists.txt  dependencies.rosinstall  package.xml
hand_eye_calibration_batch_estimation/conf/: config.info
hand_eye_calibration_batch_estimation/src/: batch_estimator.cc
hand_eye_calibration_experiments/: CMakeLists.txt  README.md  package.xml  setup.py
hand_eye_calibration_experiments/python/hand_eye_calibration_experiments/: all_algorithm_configs.py  experiment_plotting_tools.py  experiment_results.py
hand_eye_calibration_target_extractor/: CMakeLists.txt  dependencies.rosinstall  package.xml
hand_eye_calibration_target_extractor/src/: target_extractor.cc
